<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">\?</string>

    <string name="app_name">Open Movie Database</string>
    <string name="action_settings">Settings</string>

    <string name="search_title">Search</string>
    <string name="reload_title">Reload</string>
    <string name="search_hint">Find Movies, Tv Shows&#8230;</string>

    <string name="label_release_date">Release Date :</string>
    <string name="label_imdb_rated">Ratings :</string>
    <string name="label_metascore">Metascore :</string>
    <string name="label_synopsis">Synopsis :</string>
    <string name="label_casting">Casting :</string>
    <string name="suffix_rated">/10</string>
    <string name="label_type">Type :</string>
    <string name="label_production">Production :</string>
    <string name="default_search_message">Use the searchbar to find TV Shows &amp; Movies !</string>
    <string name="empty_search_message">No media found. Try Again !</string>
</resources>
