<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/wrapper_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/medium_margin">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/media_image"
                    android:layout_width="160dp"
                    android:layout_height="235dp"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:src="@drawable/default_poster"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_title"
                    app:srcCompat="@drawable/default_poster" />

                <ImageView
                    android:id="@+id/ic_rated"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="@dimen/micro_margin"
                    android:src="@drawable/ic_action_star"
                    app:layout_constraintBottom_toBottomOf="@+id/suffix_rated"
                    app:layout_constraintStart_toEndOf="@+id/suffix_rated"
                    app:srcCompat="@drawable/ic_action_star" />

                <LinearLayout
                    android:id="@+id/layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/little_margin"
                        android:src="@drawable/ic_action_arrow_left"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layout_title"
                        app:srcCompat="@drawable/ic_action_arrow_left" />

                    <TextView
                        android:id="@+id/media_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{mediaEntity.title}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="Full Metal Jacket" />

                </LinearLayout>

                <TextView
                    android:id="@+id/label_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/label_release_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/media_image"
                    app:layout_constraintTop_toBottomOf="@+id/layout_title"
                    tools:text="Date :" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_margin"
                    android:layout_marginEnd="@dimen/little_margin"
                    android:text="@{mediaEntity.released}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/label_release_date"
                    app:layout_constraintTop_toTopOf="@+id/label_release_date"
                    tools:text="10 Jul 1987" />

                <TextView
                    android:id="@+id/label_imdb_rated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/label_imdb_rated"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/media_image"
                    app:layout_constraintTop_toBottomOf="@+id/label_release_date"
                    tools:text="Ratings :" />

                <TextView
                    android:id="@+id/imdb_rated"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_margin"
                    android:text="@{mediaEntity.imdbrating}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    app:layout_constraintStart_toEndOf="@+id/label_imdb_rated"
                    app:layout_constraintTop_toTopOf="@+id/label_imdb_rated"
                    tools:text="8.3" />

                <TextView
                    android:id="@+id/suffix_rated"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/suffix_rated"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    app:layout_constraintStart_toEndOf="@+id/imdb_rated"
                    app:layout_constraintTop_toTopOf="@+id/imdb_rated"
                    tools:text="/10" />

                <TextView
                    android:id="@+id/label_metascore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/label_metascore"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/media_image"
                    app:layout_constraintTop_toBottomOf="@+id/label_imdb_rated"
                    tools:text="Metascore :" />

                <TextView
                    android:id="@+id/metascore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_margin"
                    android:layout_marginEnd="@dimen/little_margin"
                    android:text="@{mediaEntity.metascore}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/label_metascore"
                    app:layout_constraintTop_toTopOf="@+id/label_metascore"
                    tools:text="76" />

                <TextView
                    android:id="@+id/label_production"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/label_production"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/media_image"
                    app:layout_constraintTop_toBottomOf="@+id/label_metascore"
                    tools:text="Production :" />

                <TextView
                    android:id="@+id/production"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_margin"
                    android:layout_marginEnd="@dimen/little_margin"
                    android:text="@{mediaEntity.production}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/label_production"
                    app:layout_constraintTop_toTopOf="@+id/label_production"
                    tools:text="Warner Bros" />

                <TextView
                    android:id="@+id/label_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/label_type"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/media_image"
                    app:layout_constraintTop_toBottomOf="@+id/label_production"
                    tools:text="Type :" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_margin"
                    android:layout_marginEnd="@dimen/little_margin"
                    android:text="@{mediaEntity.type}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/label_type"
                    app:layout_constraintTop_toTopOf="@+id/label_type"
                    tools:text="Movie" />

                <TextView
                    android:id="@+id/label_synopsis"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:text="@string/label_synopsis"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/media_image"
                    tools:text="Synopsis :" />

                <TextView
                    android:id="@+id/synopsis"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/little_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:text="@{mediaEntity.plot}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_synopsis"
                    tools:text="Praesent id neque a leo placerat luctus. Fusce a ipsum mollis, semper sem vitae, suscipit lacus." />

                <TextView
                    android:id="@+id/label_casting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/little_margin"
                    android:text="@string/label_casting"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/synopsis"
                    tools:text="Casting :" />

                <TextView
                    android:id="@+id/casting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@{mediaEntity.actors}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_casting"
                    tools:text="Sed rutrum lorem in ornare dapibus. Aenean vehicula bibendum auctor. Donec id augue diam." />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>